[gd_scene load_steps=4 format=3 uid="uid://dfvrcp5lrv2hw"]

[ext_resource type="Script" uid="uid://dvnxtbome200r" path="res://monkey/camera/mouse_follow_camera.gd" id="1_2r4sw"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_2r4sw"]
shading_mode = 0
albedo_color = Color(0, 1, 0.0166667, 1)

[sub_resource type="SphereShape3D" id="SphereShape3D_2r4sw"]
radius = 0.3

[node name="MouseFollowCamera" type="Node3D"]
script = ExtResource("1_2r4sw")

[node name="ShpereIndicator" type="CSGSphere3D" parent="."]
unique_name_in_owner = true
visible = false
radius = 0.2
material = SubResource("StandardMaterial3D_2r4sw")

[node name="SpringArm3D" type="SpringArm3D" parent="."]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0)
collision_mask = 6
shape = SubResource("SphereShape3D_2r4sw")
spring_length = 8.0

[node name="Camera3D" type="Camera3D" parent="SpringArm3D"]
unique_name_in_owner = true
current = true

[node name="CameraPosition" type="Node3D" parent="SpringArm3D"]
unique_name_in_owner = true

[node name="HookRayCast" type="RayCast3D" parent="SpringArm3D/CameraPosition"]
unique_name_in_owner = true
target_position = Vector3(0, 0, -10)
collision_mask = 4

[node name="Behind" type="Marker3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1)
